fix styling mistake causing control bar to be too wide

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,8 +8,6 @@ html {
   --light-color: rgb(239 239 239);
 
   background-color: var(--dark-color);
-  height: 100vh;
-  width: 100vw;
 }
 
 body {
@@ -107,7 +105,7 @@ button:disabled {
   justify-content: space-evenly;
   align-items: center;
   grid-area: controls;
-  width: 100%;
+  width: 100vw;
   height: calc(var(--default-box-size) * 1.2);
   border-bottom: 2px solid var(--light-color);
 }
