--- a/src/styles/ControlBar.css
+++ b/src/styles/ControlBar.css
@@ -43,7 +43,7 @@
   justify-content: space-evenly;
   align-items: center;
   grid-area: controls;
-  width: 100%;
+  width: 100vw;
   height: calc(var(--default-box-size) * 1.2);
   border-bottom: 2px solid var(--light-color);
 }
